[gd_scene load_steps=3 format=3 uid="uid://b3w5k7luseffn"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_g4pjc"]
[ext_resource type="Script" path="res://scripts/nodes/game_board.gd" id="2_32hx0"]

[node name="Main" type="Node2D"]
script = ExtResource("1_g4pjc")

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2_32hx0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 600.0
offset_right = 696.0
offset_bottom = 56.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="HandValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Last Hand: 0"
